--- a/roles/0_ios_network_interfaces/tasks/main.yml
+++ b/roles/0_ios_network_interfaces/tasks/main.yml
@@ -10,9 +10,12 @@
 
 - name: 1.0 | "{{ inventory_hostname }}" | Configure interface Loopback
   ios_config:
+    line:
+      - interface loopback {{ loop_number }}
+      - ip address {{ loop_ip }} {{ loop_mask }}
     provider: "{{ provider }}"
     authorize: yes
-    src: "loopback_interface.j2"
+#    src: "loopback_interface.j2"
 
 - name: 1.1 | IOS "{{ inventory_hostname }}" | Configure interface Ethernet0/1
   ios_config:
