--- a/roles/0_ios_network_interfaces/tasks/main.yml
+++ b/roles/0_ios_network_interfaces/tasks/main.yml
@@ -19,6 +19,7 @@
 
 - name: 1.1 | IOS "{{ inventory_hostname }}" | Configure interface Ethernet0/1
   ios_config:
+    parents: interface Ethernet{{eth_01_id}}
     provider: "{{ provider }}"
     authorize: yes
     src: "eth_01_interface.j2"
