--- a/roles/0_ios_network_interfaces/tasks/main.yml
+++ b/roles/0_ios_network_interfaces/tasks/main.yml
@@ -17,12 +17,22 @@
 #     authorize: yes
 # #    src: "loopback_interface.j2"
 
-- name: 1.1 | IOS "{{ inventory_hostname }}" | Configure interface Ethernet0/1
+- name: 1.1 | IOS {{ inventory_hostname }} | Configure interface Ethernet0/1
   ios_config:
-    #parents: interface Ethernet{{eth_01_id}}
+    lines:
+      - description {{eth_01_description}}
+      - ip address {{eth_01_ip}} {{eth_01_mask}}
+      - no shutdown
+    parents: interface Ethernet{{eth_01_id}}
     provider: "{{ provider }}"
-    src: "eth_01_interface.j2"
     authorize: yes
+
+# - name: 1.1 | IOS "{{ inventory_hostname }}" | Configure interface Ethernet0/1
+#   ios_config:
+#     #parents: interface Ethernet{{eth_01_id}}
+#     provider: "{{ provider }}"
+#     src: "eth_01_interface.j2"
+#     authorize: yes
 
 - name: 1.2 | IOS "{{ inventory_hostname }}" | Configure interface Ethernet0/2
   ios_config:
