--- a/roles/0_ios_network_interfaces/defaults/main.yml
+++ b/roles/0_ios_network_interfaces/defaults/main.yml
@@ -1,28 +1,28 @@
-#-------------#
+####################
+# Site de bordeaux #
+####################
+
 # Credentials #
 #-------------#
-mgmt_username: cisco
-mgmt_password: cisco
-#--------------#
+mgmt_username_bdx: cisco
+mgmt_password_bdx: cisco
+
 # Loopback int #
 #--------------#
-loop_ip: 7.7.7.7
-loop_mask: 255.255.255.255
-loop_number: 7
-#-------------------#
+loop_ip_bdx: 33.33.33.33
+loop_mask_bdx: 255.255.255.255
+loop_number_bdx: 33
+
 # Eth 0/1 interface #
 #-------------------#
-eth_01_id: 0/1
-eth_01_description: interco rtr-switch
-eth_01_ip: 10.44.161.241
-eth_01_mask: 255.255.255.240
-#-------------------#
+eth_01_id_bdx: 0/1
+eth_01_description_bdx: interco rtr-switch
+eth_01_ip_bdx: 10.44.161.241
+eth_01_mask_bdx: 255.255.255.240
+
 # Eth 0/2 interface #
 #-------------------#
-eth_02_id: 0/2
-eth_02_description: WAN for DMVPN
-eth_02_ip: 169.254.0.3
-eth_02_mask: 255.255.255.0
-#-------------------#
-# Eth 0/3 interface #
-#-------------------#
+eth_02_id_bdx: 0/2
+eth_02_description_bdx: WAN for DMVPN
+eth_02_ip_bdx: 169.254.0.3
+eth_02_mask_bdx: 255.255.255.0
