--- a/roles/1_ios_router_osfp/tasks/mail.yml
+++ b/roles/1_ios_router_osfp/tasks/mail.yml
@@ -11,3 +11,7 @@
     parents: router ospf 1
     authorize: yes
     #src: "ospf_setting_bdx.j2"
+
+- name: configure top level configuration
+  ios_config:
+    lines: hostname {{ inventory_hostname }}
