--- a/roles/1_ios_router_ospf/tasks/main.yml
+++ b/roles/1_ios_router_ospf/tasks/main.yml
@@ -1,30 +1,15 @@
-#-------------------------------------------------------#
-# Configuration des interfaces pour le site de bordeaux #
-#-------------------------------------------------------#
-- name: 0.0 | SYS | Definition du provider
-  set_fact:
-    provider:
-      host: "{{ inventory_hostname }}"
-      username: "{{ mgmt_username_bdx }}"
-      password: "{{ mgmt_password_bdx }}"
-  # vars:
-  #   mgmt_username_bdx: "{{ vault_mgmt_username }}"
-  #   mgmt_password_bdx: "{{ vault_mgmt_password }}"
+#------------------------------------------------#
+# Configuration ospf pour le routeur de bordeaux #
+#------------------------------------------------#
+# - name: 1.5 | SYS | Definition du provider
+#   set_fact:
+#     provider:
+#       host: "{{ inventory_hostname }}"
+#       username: "{{ mgmt_username_bdx }}"
+#       password: "{{ mgmt_password_bdx }}"
 
-- name: 1.0 | {{ inventory_hostname }} | Configure interface Loopback {{loop_number_bdx}}
+- name: 1.5 | IOS {{ inventory_hostname }} | Configure OSPF
   ios_config:
     provider: "{{ provider }}"
     authorize: yes
-    src: "loopback_interface_bdx.j2"
-
-- name: 1.1 | IOS {{ inventory_hostname }} | Configure interface Ethernet{{eth_01_id_bdx}}
-  ios_config:
-    provider: "{{ provider }}"
-    authorize: yes
-    src: "eth_01_interface_bdx.j2"
-
-- name: 1.2 | IOS {{ inventory_hostname }} | Configure interface Ethernet{{eth_02_id_bdx}}
-  ios_config:
-    provider: "{{ provider }}"
-    authorize: yes
-    src: "eth_02_interface_bdx.j2"
+    src: "ospf_setting_bdx.j2"
