--- a/roles/1_ios_router_ospf/tasks/main.yml
+++ b/roles/1_ios_router_ospf/tasks/main.yml
@@ -1,12 +1,12 @@
 #------------------------------------------------#
 # Configuration ospf pour le routeur de bordeaux #
 #------------------------------------------------#
-# - name: 1.5 | SYS | Definition du provider
-#   set_fact:
-#     provider:
-#       host: "{{ inventory_hostname }}"
-#       username: "{{ mgmt_username_bdx }}"
-#       password: "{{ mgmt_password_bdx }}"
+- name: SYS | Definition du provider
+  set_fact:
+    provider:
+      host: "{{ inventory_hostname }}"
+      username: "{{ mgmt_username_bdx }}"
+      password: "{{ mgmt_password_bdx }}"
 
 - name: 1.5 | IOS {{ inventory_hostname }} | Configure OSPF
   ios_config:
