--- a/roles/1_ios_router_ospf/defaults/main.yml
+++ b/roles/1_ios_router_ospf/defaults/main.yml
@@ -4,8 +4,8 @@
 
 # Credentials #
 #-------------#
-mgmt_username_bdx: cisco
-mgmt_password_bdx: cisco
+# mgmt_username_bdx: cisco
+# mgmt_password_bdx: cisco
 
 # BDX Vars #
 #----------#
