--- a/roles/1_ios_router_ospf/tasks/main.yml
+++ b/roles/1_ios_router_ospf/tasks/main.yml
@@ -13,3 +13,5 @@
     provider: "{{ provider }}"
     authorize: yes
     src: "ospf_setting_bdx.j2"
+    dependencies:
+  - { role: 0_router_network_interfaces, {{mgmt_username_bdx}}, {{mgmt_password_bdx}} }
