--- a/roles/1_ios_router_ospf/tasks/main.yml
+++ b/roles/1_ios_router_ospf/tasks/main.yml
@@ -1,17 +1,15 @@
 #------------------------------------------------#
 # Configuration ospf pour le routeur de bordeaux #
 #------------------------------------------------#
-- name: SYS | Definition du provider
-  set_fact:
-    provider:
-      host: "{{ inventory_hostname }}"
-      username: "{{ mgmt_username_bdx }}"
-      password: "{{ mgmt_password_bdx }}"
+# - name: SYS | Definition du provider
+#   set_fact:
+#     provider:
+#       host: "{{ inventory_hostname }}"
+#       username: "{{ mgmt_username_bdx }}"
+#       password: "{{ mgmt_password_bdx }}"
 
 - name: 1.5 | IOS {{ inventory_hostname }} | Configure OSPF
   ios_config:
-    provider: "{{ provider }}"
+    provider: "{{provider}}"
     authorize: yes
     src: "ospf_setting_bdx.j2"
-    dependencies:
-  - { role: 0_router_network_interfaces, {{mgmt_username_bdx}}, {{mgmt_password_bdx}} }
