--- a/roles/1_ios_router_network_interfaces/tasks/main.yml
+++ b/roles/1_ios_router_network_interfaces/tasks/main.yml
@@ -1,12 +1,12 @@
 #-------------------------------------------------------#
 # Configuration des interfaces pour le site de bordeaux #
 #-------------------------------------------------------#
-- name: 0.0 | SYS | Definition du provider
-  set_fact:
-    provider:
-      host: "{{ inventory_hostname }}"
-      username: "{{ mgmt_username_bdx }}"
-      password: "{{ mgmt_password_bdx }}"
+# - name: 0.0 | SYS | Definition du provider
+#   set_fact:
+#     provider:
+#       host: "{{ inventory_hostname }}"
+#       username: "{{ mgmt_username_bdx }}"
+#       password: "{{ mgmt_password_bdx }}"
   # vars:
   #   mgmt_username_bdx: "{{ vault_mgmt_username }}"
   #   mgmt_password_bdx: "{{ vault_mgmt_password }}"
