--- a/architecture.yml
+++ b/architecture.yml
@@ -3,6 +3,7 @@
 - hosts: ios_router_bordeaux
   connection: local
   roles:
-    - { role: 0_ios_router_network_interfaces }
+    - { role: 0_set_fact }
+    - { role: 1_ios_router_network_interfaces }
     - { role: 1_ios_router_ospf }
-    - { role: 2_ios_router_hub_dmvpn}
+   # - { role: 2_ios_router_hub_dmvpn}
