--- a/roles/0_set_fact/tasks/main.yml
+++ b/roles/0_set_fact/tasks/main.yml
@@ -8,6 +8,8 @@
       username: "{{ mgmt_username_bdx }}"
       password: "{{ mgmt_password_bdx }}"
     loop_ip_bdx: "{{loop_ip_dbx}}"
+  - debug:
+      msg: "Variable : {{loop_ip_dbx}}"
   # vars:
   #   mgmt_username_bdx: "{{ vault_mgmt_username }}"
   #   mgmt_password_bdx: "{{ vault_mgmt_password }}"
