--- a/roles/0_set_fact/tasks/main.yml
+++ b/roles/0_set_fact/tasks/main.yml
@@ -7,9 +7,9 @@
       host: "{{ inventory_hostname }}"
       username: "{{ mgmt_username_bdx }}"
       password: "{{ mgmt_password_bdx }}"
-    loop_ip_bdx: "{{loop_ip_dbx}}"
+    loopback_ip_bdx: "{{loop_ip_dbx}}"
   - debug:
-      msg: "Variable : {{loop_ip_dbx}}"
+      msg: "Variable : {{loopback_ip_dbx}}"
   # vars:
   #   mgmt_username_bdx: "{{ vault_mgmt_username }}"
   #   mgmt_password_bdx: "{{ vault_mgmt_password }}"
