--- a/roles/0_set_fact/tasks/main.yml
+++ b/roles/0_set_fact/tasks/main.yml
@@ -7,7 +7,7 @@
       host: "{{ inventory_hostname }}"
       username: "{{ mgmt_username_bdx }}"
       password: "{{ mgmt_password_bdx }}"
-    loopback_ip_bdx: "{{loop_ip_dbx}}"
+    loop_ip_bdx: "{{loop_ip_bdx}}"
   # vars:
   #   mgmt_username_bdx: "{{ vault_mgmt_username }}"
   #   mgmt_password_bdx: "{{ vault_mgmt_password }}"
