--- a/roles/2_ios_router_ospf/defaults/main.yml
+++ b/roles/2_ios_router_ospf/defaults/main.yml
@@ -1,5 +1,5 @@
-####################
-# Site de bordeaux #
-####################
+#############
+# OSPF Vars #
+#############
 ospf_process_number_bdx: 1
 
