--- a/roles/3_ios_router_hub_dmvpn/tasks/main.yml
+++ b/roles/3_ios_router_hub_dmvpn/tasks/main.yml
@@ -1,20 +1,5 @@
-#-------------------------------------------------------#
-# Configuration des interfaces pour le site de bordeaux #
-#-------------------------------------------------------#
-- name: 1.0 | {{ inventory_hostname }} | Configure interface Loopback {{loop_number_bdx}}
+- name: 3.0 | {{ inventory_hostname }} | Configure HUB DMVPN
   ios_config:
     provider: "{{provider_bdx}}"
     authorize: yes
-    src: "loopback_interface_bdx.j2"
-
-- name: 1.1 | IOS {{ inventory_hostname }} | Configure interface Ethernet{{eth_01_id_bdx}}
-  ios_config:
-    provider: "{{provider_bdx}}"
-    authorize: yes
-    src: "eth_01_interface_bdx.j2"
-
-- name: 1.2 | IOS {{ inventory_hostname }} | Configure interface Ethernet{{eth_02_id_bdx}}
-  ios_config:
-    provider: "{{provider_bdx}}"
-    authorize: yes
-    src: "eth_02_interface_bdx.j2"
+    src: "hub_dmvpn_bdx.j2"
