--- a/architecture.yml
+++ b/architecture.yml
@@ -6,4 +6,4 @@
     - { role: 0_set_fact }
     - { role: 1_ios_router_network_interfaces }
     - { role: 2_ios_router_ospf }
-   # - { role: 3_ios_router_hub_dmvpn}
+    - { role: 3_ios_router_hub_dmvpn}
