--- a/roles/2_ios_router_ospf/tasks/main.yml
+++ b/roles/2_ios_router_ospf/tasks/main.yml
@@ -1,7 +1,7 @@
 #------------------------------------------------#
 # Configuration ospf pour le routeur de bordeaux #
 #------------------------------------------------#
-- name: 2.0 | IOS {{ inventory_hostname }} | Configure OSPF BDX
+- name: 2.0 | IOS {{ inventory_hostname }} | Configure OSPF
   ios_config:
     provider: "{{provider_bdx}}"
     authorize: yes
