--- a/architecture.yml
+++ b/architecture.yml
@@ -7,4 +7,4 @@
     - { role: 1_ios_router_network_interfaces }
     - { role: 2_ios_router_ospf }
     - { role: 3_ios_router_hub_dmvpn}
-    - { role: 4_ios_router_hub_dmvpn}
+    - { role: 4_ios_router_ipsec_vpn}
