--- a/roles/4_ios_router_ipsec_vpn/tasks/main.yml
+++ b/roles/4_ios_router_ipsec_vpn/tasks/main.yml
@@ -13,7 +13,7 @@
 
 - name: 4.2 | {{ inventory_hostname }} | Configure ISAKMP Transform Set
   ios_config:
-    line:
+    lines:
       - crypto ipsec transform-set {{crypto_isakmp_transform_set_bdx}} esp-3des esp-sha-hmac
     provider: "{{ provider_bdx }}"
     authorize: yes
