--- a/architecture.yml
+++ b/architecture.yml
@@ -8,3 +8,4 @@
    # - { role: 2_ios_router_ospf }
    # - { role: 3_ios_router_hub_dmvpn}
     - { role: 4_ios_router_ipsec_vpn}
+   # - { role: 5_ios_router_spoke_dmvpn}
