--- a/architecture.yml
+++ b/architecture.yml
@@ -4,6 +4,7 @@
   connection: local
   roles:
     - { role: 0_set_fact }
+    - { role: 01_hostname }
    # - { role: 1_ios_router_network_interfaces }
    # - { role: 2_ios_router_ospf }
    # - { role: 3_ios_router_hub_dmvpn}
