--- a/architecture.yml
+++ b/architecture.yml
@@ -4,9 +4,16 @@
   connection: local
   roles:
     - { role: 0_set_fact }
-    #- { role: 01_hostname }
+    - { role: 01_hostname }
     - { role: 1_ios_router_network_interfaces }
     - { role: 2_ios_router_ospf }
     - { role: 3_ios_router_hub_dmvpn}
     - { role: 4_ios_router_ipsec_vpn}
+
+- hosts: ios_router_toulouse
+  connection: local
+  roles:
+    - { role: 0_set_fact }
+    - { role: 1_ios_router_network_interfaces }
+    #- { role: 2_ios_router_ospf }
     - { role: 5_ios_router_spoke_dmvpn}
