--- a/roles/1_ios_router_network_interfaces/defaults/main.yml
+++ b/roles/1_ios_router_network_interfaces/defaults/main.yml
@@ -19,5 +19,77 @@ eth_01_mask_bdx: 255.255.255.240
 #-------------------#
 eth_02_id_bdx: 0/2
 eth_02_description_bdx: WAN for DMVPN
-eth_02_ip_bdx: 169.254.0.3
+eth_02_ip_bdx: 169.254.0.1
 eth_02_mask_bdx: 255.255.255.0
+
+#####################
+# Site de toulouse #
+#####################
+
+# Loopback int #
+#--------------#
+loop_ip_tls: 31.31.31.31
+loop_mask_tls: 255.255.255.255
+loop_number_tls: 31
+
+# Eth 0/1 interface #
+#-------------------#
+eth_01_id_tls: 0/1
+eth_01_description_tls: interco rtr-switch
+eth_01_ip_tls: 10.33.31.241
+eth_01_mask_tls: 255.255.255.240
+
+# Eth 0/2 interface #
+#-------------------#
+eth_02_id_tls: 0/2
+eth_02_description_tls: WAN for DMVPN
+eth_02_ip_tls: 169.254.0.2
+eth_02_mask_tls: 255.255.255.0
+
+##################
+# Site de oxford #
+##################
+
+# Loopback int #
+#--------------#
+loop_ip_oxf: 186.186.186.186
+loop_mask_oxf: 255.255.255.255
+loop_number_oxf: 186
+
+# Eth 0/1 interface #
+#-------------------#
+eth_01_id_oxf: 0/1
+eth_01_description_oxf: interco rtr-switch
+eth_01_ip_oxf: 10.44.186.241
+eth_01_mask_oxf: 255.255.255.240
+
+# Eth 0/2 interface #
+#-------------------#
+eth_02_id_oxf: 0/2
+eth_02_description_oxf: WAN for DMVPN
+eth_02_ip_oxf: 169.254.0.3
+eth_02_mask_oxf: 255.255.255.0
+
+######################
+# Site de manchester #
+######################
+
+# Loopback int #
+#--------------#
+loop_ip_man: 161.161.161.161
+loop_mask_man: 255.255.255.255
+loop_number_man: 161
+
+# Eth 0/1 interface #
+#-------------------#
+eth_01_id_man: 0/1
+eth_01_description_man: interco rtr-switch
+eth_01_ip_man: 10.44.161.241
+eth_01_mask_man: 255.255.255.240
+
+# Eth 0/2 interface #
+#-------------------#
+eth_02_id_man: 0/2
+eth_02_description_man: WAN for DMVPN
+eth_02_ip_man: 169.254.0.4
+eth_02_mask_man: 255.255.255.0
