--- a/roles/1_ios_router_network_interfaces/tasks/main.yml
+++ b/roles/1_ios_router_network_interfaces/tasks/main.yml
@@ -18,3 +18,24 @@
     provider: "{{provider_bdx}}"
     authorize: yes
     src: "eth_02_interface_bdx.j2"
+
+#-------------------------------------------------------#
+# Configuration des interfaces pour le site de toulouse #
+#-------------------------------------------------------#
+- name: 1.3 | {{ inventory_hostname }} | Configure interface Loopback {{loop_number_tls}}
+  ios_config:
+    provider: "{{provider_tls}}"
+    authorize: yes
+    src: "loopback_interface_tls.j2"
+
+- name: 1.4 | IOS {{ inventory_hostname }} | Configure interface Ethernet{{eth_01_id_tls}}
+  ios_config:
+    provider: "{{provider_tls}}"
+    authorize: yes
+    src: "eth_01_interface_tls.j2"
+
+- name: 1.5 | IOS {{ inventory_hostname }} | Configure interface Ethernet{{eth_02_id_tls}}
+  ios_config:
+    provider: "{{provider_tls}}"
+    authorize: yes
+    src: "eth_02_interface_tls.j2"
