--- a/architecture.yml
+++ b/architecture.yml
@@ -3,12 +3,12 @@
 - hosts: ios_router_bordeaux
   connection: local
   roles:
-    - { role: 0_set_fact }
-    - { role: 01_hostname }
-    - { role: 1_ios_router_network_interfaces }
-    - { role: 2_ios_router_ospf }
-    - { role: 3_ios_router_hub_dmvpn}
-    - { role: 4_ios_router_ipsec_vpn}
+    # - { role: 0_set_fact }
+    # - { role: 01_hostname }
+    # - { role: 1_ios_router_network_interfaces }
+    # - { role: 2_ios_router_ospf }
+    # - { role: 3_ios_router_hub_dmvpn}
+    # - { role: 4_ios_router_ipsec_vpn}
 
 - hosts: ios_router_toulouse
   connection: local
