--- a/architecture.yml
+++ b/architecture.yml
@@ -3,9 +3,9 @@
 - hosts: ios_router_bordeaux
   connection: local
   roles:
-    # - { role: 0_set_fact }
+    # - { role: 0.1_bdx_set_fact }
     # - { role: 01_hostname }
-    # - { role: 1_bdx_ios_router_network_interfaces }
+    # - { role: 1.1_bdx_ios_router_network_interfaces }
     # - { role: 2_ios_router_ospf }
     # - { role: 3_ios_router_hub_dmvpn}
     # - { role: 4_ios_router_ipsec_vpn}
@@ -13,7 +13,22 @@
 - hosts: ios_router_toulouse
   connection: local
   roles:
-    - { role: 0_set_fact }
-    - { role: 1_tls_ios_router_network_interfaces }
-    #- { role: 2_ios_router_ospf }
+    - { role: 0.2_tls_set_fact }
+    # - { role: 01_hostname }
+    - { role: 1.2_tls_ios_router_network_interfaces }
+    - { role: 2.2_tls_ios_router_ospf }
     - { role: 5_ios_router_spoke_dmvpn}
+
+- hosts: ios_router_oxford
+  connection: local
+  roles:
+    - { role: 0.3_oxf_set_fact }
+    # - { role: 01_hostname }
+    - { role: 1.4_tls_ios_router_network_interfaces }
+
+- hosts: ios_router_manchester
+  connection: local
+  roles:
+    - { role: 0.4_man_set_fact }
+    # - { role: 01_hostname }
+    - { role: 1.4_tls_ios_router_network_interfaces }
