--- a/architecture.yml
+++ b/architecture.yml
@@ -4,31 +4,27 @@
   connection: local
   roles:
     # - { role: 0.1_bdx_set_fact }
-    # - { role: 01_hostname }
     # - { role: 1.1_bdx_ios_router_network_interfaces }
-    # - { role: 2_ios_router_ospf }
-    # - { role: 3_ios_router_hub_dmvpn}
-    # - { role: 4_ios_router_ipsec_vpn}
+    # - { role: 2.1_bdx_ios_router_ospf }
+    # - { role: 3.1_ios_router_hub_dmvpn}
+    # - { role: 4.1_ios_router_ipsec_vpn}
 
 - hosts: ios_router_toulouse
   connection: local
   roles:
     - { role: 0.2_tls_set_fact }
-    # - { role: 01_hostname }
     - { role: 1.2_tls_ios_router_network_interfaces }
     - { role: 2.2_tls_ios_router_ospf }
-    - { role: 5_ios_router_spoke_dmvpn}
+    - { role: 5.2_ios_router_spoke_dmvpn}
 
 - hosts: ios_router_oxford
   connection: local
   roles:
     - { role: 0.3_oxf_set_fact }
-    # - { role: 01_hostname }
     - { role: 1.4_tls_ios_router_network_interfaces }
 
 - hosts: ios_router_manchester
   connection: local
   roles:
     - { role: 0.4_man_set_fact }
-    # - { role: 01_hostname }
     - { role: 1.4_tls_ios_router_network_interfaces }
