--- a/roles/2.3_oxf_ios_router_ospf/defaults/main.yml
+++ b/roles/2.3_oxf_ios_router_ospf/defaults/main.yml
@@ -2,4 +2,6 @@
 # OSPF Vars #
 #############
 ospf_process_number_oxf: 1
+ospf_interco_network_oxf: 10.44.186.240
+ospf_dmvpn_network_ip: 172.16.0.0
 
