--- a/architecture.yml
+++ b/architecture.yml
@@ -18,20 +18,20 @@
     - { role: 4.2_tls_ios_router_ipsec_vpn }
     - { role: 5.2_tls_ios_router_spoke_dmvpn}
 
-- hosts: ios_router_oxford
-  connection: local
-  roles:
-    - { role: 0.3_oxf_set_fact }
-    - { role: 1.3_oxf_ios_router_network_interfaces }
-    - { role: 2.3_oxf_ios_router_ospf }
-    - { role: 4.3_oxf_ios_router_ipsec_vpn }
-    - { role: 5.3_oxf_ios_router_spoke_dmvpn}
+# - hosts: ios_router_oxford
+#   connection: local
+#   roles:
+#     - { role: 0.3_oxf_set_fact }
+#     - { role: 1.3_oxf_ios_router_network_interfaces }
+#     - { role: 2.3_oxf_ios_router_ospf }
+#     - { role: 4.3_oxf_ios_router_ipsec_vpn }
+#     - { role: 5.3_oxf_ios_router_spoke_dmvpn}
 
-- hosts: ios_router_manchester
-  connection: local
-  roles:
-    - { role: 0.4_man_set_fact }
-    - { role: 1.4_man_ios_router_network_interfaces }
-    - { role: 2.4_man_ios_router_ospf }
-    - { role: 4.4_man_ios_router_ipsec_vpn }
-    - { role: 5.4_man_ios_router_spoke_dmvpn}
+# - hosts: ios_router_manchester
+#   connection: local
+#   roles:
+#     - { role: 0.4_man_set_fact }
+#     - { role: 1.4_man_ios_router_network_interfaces }
+#     - { role: 2.4_man_ios_router_ospf }
+#     - { role: 4.4_man_ios_router_ipsec_vpn }
+#     - { role: 5.4_man_ios_router_spoke_dmvpn}
