--- a/roles/0.1_bdx_set_fact/tasks/main.yml
+++ b/roles/0.1_bdx_set_fact/tasks/main.yml
@@ -8,3 +8,12 @@
       username: "{{ mgmt_username_bdx }}"
       password: "{{ mgmt_password_bdx }}"
     loop_ip_bdx: "{{loop_ip_bdx}}"
+    vlan_id_1: "{{vlan_id_1}}"
+    vlan_id_2: "{vlan_id_2}"
+    vlan_id_3: "{vlan_id_3}"
+    vlan_id_4: "{vlan_id_4}"
+
+    vlan_name_1: "{{vlan_name_1}}"
+    vlan_name_2: "{{vlan_name_2}}"
+    vlan_name_3: "{{vlan_name_3}}"
+    vlan_name_4: "{{vlan_name_4}}"
