[WIP] to renew host file after installing new version of ansible (2.7)

--- a/architecture.yml
+++ b/architecture.yml
@@ -16,3 +16,8 @@
   connection: local
   roles:
      - { role: router_spoke_dmvpn }
+
+- hosts: switch
+  connection: local
+  roles:
+    - { role: switch_vlan }
