--- a/group_vars/OXF.yml
+++ b/group_vars/OXF.yml
@@ -2,8 +2,4 @@
 #------------#
 loop_ip: 186.186.186.186
 
-eth_01_ip_region: 186
-
-eth_02_ip: 170.254.0.3
-
-ip_spoke_dmvpn: 172.16.0.3
+ip_region: 186
